src/test/ui/borrowck/borrowck-bad-nested-calls-move.stderr
error[E0505]: cannot move out of `a` because it is borrowed
  --> $DIR/borrowck-bad-nested-calls-move.rs:25:9
   |
LL |     add(
   |     --- borrow later used by call
LL |         &*a,
   |         --- borrow of `*a` occurs here
LL |         a);
   |         ^ move out of `a` occurs here

error[E0505]: cannot move out of `a` because it is borrowed
  --> $DIR/borrowck-bad-nested-calls-move.rs:32:9
   |
LL |     add(
   |     --- borrow later used by call
LL |         &*a,
   |         --- borrow of `*a` occurs here
LL |         a);
   |         ^ move out of `a` occurs here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0505`.
